Revert "Wreck stuff, refactor in progress"
This reverts commit 6266c1250f71ba289fb59a4fb261985026824f89.